argocd/base/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: media
  labels:
    app: autobrr
spec:
  type: ClusterIP
  selector:
    app: autobrr
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: metrics
      port: 9094
      targetPort: 9094
