argocd/base/autobrr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: autobrr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`autobrr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: autobrr
          port: 7474
  tls: {}
